[package]
name = "playaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
